# Zangbeto

./: .gitignore  README.md  clean_db.py  crawler.py  example-rapport.html  main.py  notify.py  pyproject.toml  rapport.html  requirements.txt  setup.sh  sites.txt  todo.md
data/: data_loader.py
systemd/: monitor.service  monitor.timer
templates/: enhanced_report_template.html  report_template.html
